Fix header on mobile

--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -33,10 +33,18 @@
     margin-left: 10px
     text-decoration: none
     border-bottom: 1px solid rgba(255, 255, 255, 0.5)
-    
-  .header-lastleft
+  
+  .header-newnote
     @media only screen and (max-width: 750px)
       margin-left: auto
+  
+  .header-settings
+    @media only screen and (max-width: 750px)
+      display: none
+
+  .header-lastleft
+    @media only screen and (max-width: 750px)
+      display: none
 
     @media only screen and (min-width: 751px)
       margin-right: auto
